--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "DISCORD BOT TOKEN",
+  "token": "",
   "prefix": "!",
   "loadSlashsGlobal": true, "_COMMENT_": "Set it to true, when your Slash Commands are ready, false loads instant true loads slow but stable! (GLOBAL/GUILD COMMANDS, DISCORD DOCS!)",
   "slashCommandsDirs": [
